--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
-<app-left-nav></app-left-nav>
+<app-home></app-home>
+<!-- <app-left-nav></app-left-nav> -->
 <router-outlet>
-  Welcone to starex univeristy
+  
   </router-outlet>
   <app-footer></app-footer>
