--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,1 +1,170 @@
-<p>footer works!</p>
+<footer class="footer py50">
+        <div class="container" style="
+    
+    max-width: 1386px;
+
+">
+            <div class="row">
+                <div class="col-lg-5 col-sm-5 col-12 about">
+                    <h4>About Starex University</h4>
+                    <p class="footerAbout" style="text-align:left">The Starex University, Gurugram, has been conceptualized under the provisions of Haryana Private Universities (Amendment) Act 2006.</p>
+                    <h4 class="mt-5">Our Address</h4>
+                    <p style="text-align:left">Starex University
+                        <br> Address : NH-48, Vill- Binola, P.O. Bhorakalan, Gurugram, Haryana 122413 (India)
+                        <br> Toll Free : 1800 1033 123    (24x7)
+                         <!--<br> ( Mon-Sat : 09:00AM To 06:00PM )-->
+                        <!-- <br> ( Sunday : 11:00AM To 05:00PM )-->
+                        <br>Email : <a href="mailto:admission@starexuniversity.co.in" style="
+    color: white;
+">admission&#64;starexuniversity.co.in</a></p>
+                          <h6 class="mt-5">For International Student Admission</h6>
+                          <a href="https://www.starexuniversity.com/international-students" class="flashButton">Click Here</a><br>                     
+                        <br>Email : <a href="mailto:global@starexuniversity.com" style="
+    color: white;
+">global&#64;starexuniversity.com</a><p></p>
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                      
+                </div>
+                <div class="col-lg-4 col-sm-7 col-12 quicklink">
+                    <div class="row">
+                        <div class="col-md-12">
+                              <h4>Important Links</h4>
+                             <div class="row">
+                        <div class="col-md-6">
+                              <ul>
+                        <li><a href="https://www.starexuniversity.com/blogs">Blogs</a></li>                        
+                       <!-- <li><a href="">Sports</a></li>-->
+                        <li><a href="https://www.starexuniversity.com/contact">Contact Us</a></li>
+                         
+                       
+                      <!--   <li><a href="https://scholarships.gov.in/" target="_blank">Scholarship Portal</a></li>
+                        <li><a href="http://hryscbcschemes.in/StaticPages/HomePage.aspx" target="_blank">SC / BC Scholarship</a></li> -->
+                        <li><a href="https://www.starexuniversity.com/complaints">Complaints</a></li>
+                        <li><a href="https://www.starexuniversity.com/examination-form">Examination Form</a></li>
+                        <li><a href="https://www.starexuniversity.com/reappear-form">Reappear Form</a></li>
+                         <li><a href="https://www.starexuniversity.com/placement">Placement</a></li>
+                        <!---->
+                        <li><a href="https://www.starexuniversity.com/international-students">International Students</a></li>
+                    <li><a href="https://www.starexuniversity.com/app-assets/vendors/assets/rti-act-2005.pdf">RTI Act</a></li>
+                   <!--   
+                        <li>  <a target="_blank"  href='https://pmny.in/Vrr2EYe8adh6' > Pay Fees Online </a></li>-->
+                         <li style="width: 108%;">  <a target="_blank" href="https://starexuniversity.com/ibm"> MBA &amp; B.Tech with (IBM - ICE) </a></li>
+                         <li style="width: 108%;">  <a target="_blank" href="https://www.starexuniversity.com/prospectus"> University Prospectus </a></li>
+                        <li style="width: 108%;">  <a href="https://starexuniversity.com/privacy"> Privacy Policy </a></li>
+                       <!--  <li> <a href="https://www.starexuniversity.com/sunstone/" class="flashButton"  target="_blank" style="
+    padding-top: 3px;
+    height: 12%;
+    padding-bottom: 7px;
+    margin-top: 25px;
+">Sunstone</a><br>   </li>-->
+
+  <li style="width: 108%;"><a href="https://www.starexuniversity.com/academics/Vocational-Courses">B.Voc</a></li>
+
+                               <li style="width: 108%;">   <a href="https://www.starexuniversity.com/b-skills-food-hospitality">B.Skills</a></li>
+
+
+                        
+                    </ul>
+                        </div>
+                        <div class="col-md-6">
+                                <ul>
+                        <li><a href="http://erp.starexuniversity.in/index.php" target="_blank">ERP Login</a></li>
+<li><a href="https://www.starexuniversity.com/notice">Notice</a></li>
+<li><a href="https://www.starexuniversity.com/feedback">Feedback</a></li>
+<li><a href="https://www.starexuniversity.com/committees">Commitees &amp; Board</a></li>
+<li><a href="https://www.starexuniversity.com/phd">PHD</a></li>                      
+<li><a href="https://www.starexuniversity.com/app-assets/vendors/assets/pdf/2025/2025_footer_research_and_dev.pdf" target="_blank">Research &amp; Development</a></li>  
+<li><a href="https://www.starexuniversity.com/admission/">Apply Online</a></li>  
+<li><a href="https://www.starexuniversity.com/career">Career</a></li>
+<li><a href="https://www.starexuniversity.com/faq">FAQ's</a></li>
+<li><a href="https://www.starexuniversity.com/app-assets/vendors/assets/pdf/2025/2025_footer_fee_refund.pdf" target="_blank">Fee Refund Policy</a></li> 
+<li><a href="https://www.starexuniversity.com/app-assets/vendors/assets/pdf/2025/2025_header_board_studies.pdf" target="_blank">Board of studies</a></li> 
+<li><a href="https://www.starexuniversity.com/app-assets/vendors/assets/pdf/2025/2025_dean_vo.pdf">Chief Vigilance Officer(CVO) - Part Time</a></li> 
+
+ <li> <a href="https://www.starexuniversity.com/functionup/" class="" target="_blank" style="
+    padding-top: 3px;
+    height: 12%;
+    padding-bottom: 7px;
+    margin-top: 25px;
+">FunctionUp</a><br>   </li>
+
+<!--<li><a  href="https://www.starexuniversity.com/app-assets/vendors/assets/sexual-harassment.pdf" target="_blank">Anti-Sexual Harassment
+</a></li>-->
+<!--<li><a  href="https://www.starexuniversity.com/student-loan">Student Loan</a></li>-->
+                      
+                    </ul>
+                        </div>
+                        
+                    <!--    <div class="cok-md-12">    
+                <br>   <h6>Kashmir, India (Representative)</h6>
+                          <p style="text-align:left";>
+                       Name: PARADISE Career Experts <br>
+MD/CEO Mir Naseer Ahmad <br>
+Address: Noor Complex Near GDC Boys Pulwama 192301
+                      
+                      
+                          
+                          
+                                                             
+
+                      
+                       </p></div>-->
+                        </div>   
+                        </div>
+                    </div>
+                  
+                 
+                 
+                 
+                  
+                </div>
+              
+                <div class="col-lg-3 col-sm-6 col-12 connect text-left">
+                    <h4>Connect</h4>
+                    <ul>
+                        <li class="px-1 py-2">
+                            <a href="https://www.facebook.com/Starexuniversity/" target="_blank">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/images/icons/social/fb.png" alt="">
+                            </a>
+                        </li>
+                        <li class="px-1 py-2">
+                            <a href="https://www.instagram.com/starexuniversity/" target="_blank">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/images/icons/social/insta.png" alt="">
+                            </a>
+                        </li>
+                        <li class="px-1 py-2">
+                            <a href="https://www.linkedin.com/company/starexuniversity/" target="_blank">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/images/icons/social/link.png" alt="">
+                            </a>
+                        </li>
+                        <li class="px-1 py-2">
+                            <a href="https://x.com/StarexUniversi1">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/images/icons/social/twitter.png" alt="">
+                            </a>
+                        </li>
+                        <li class="px-1 py-2">
+                            <a href="https://www.youtube.com/@starexuniversity1187">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/images/icons/social/youtube.png" alt="">
+                            </a>
+                        </li>
+                         <li class="px-1 py-2">
+                            <a href="https://starexuniversitygurgaon.s3.ap-south-1.amazonaws.com/tour.html">
+                                <img src="https://www.starexuniversity.com/app-assets/vendors/assets/degree.png" alt="" style="width: 39px;">
+                            </a>
+                        </li>
+
+                    </ul>
+                    <!--<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FStarexuniversity%2F&tabs=timeline&width=239&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1351665484929890" width="100%" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>-->
+                </div>
+                <div class="col-12">
+                     <p class="text-center text-white">Copyright 2025-26 &#64; - All Rights Reserved By <a target="_blank" href="https://www.starexuniversity.com/"><b class="text-white"> Starex University ,Gurugram </b></a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
