--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,23 +1,99 @@
-<div>
-    <mat-toolbar color="primary" class="header_s1" >
-        <button mat-button>Home</button>
-        <button mat-button>About</button>
-        <button mat-button>Services</button>
-        <button mat-button>Portfolio</button>
-        <button mat-button>Blog</button>
-        <button mat-button>Contact</button>
-        hello text
-    </mat-toolbar>
-    <mat-toolbar color="primary" class="header_s2">
-        <img src="assets/Logo.png" alt="Logo" class="logo" />
-        <!-- <img src="https://www.starexuniversity.com/app-assets/vendors/assets/images/stickylogo.png" alt="Logo"
-            class="logo" /> -->
-        <span class="spacer"></span>
-        <button mat-button>Home</button>
-        <button mat-button>About</button>
-        <button mat-button>Services</button>
-        <button mat-button>Portfolio</button>
-        <button mat-button>Blog</button>
-        <button mat-button>Contact</button>
-    </mat-toolbar>
-</div>
+<mat-toolbar color="primary" class="header_s2">
+    <img src="assets/Logo.png" alt="Logo" class="logo" />
+
+    <span class="spacer"></span>
+    <div class="school_list">
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Agricultural-Studies-Icon-03.png "
+                    alt=""></div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Agriculture-Science"> Agriculture Science</a>
+
+            </div>
+        </div>
+
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Commerce-and-Management-Icon-05.png "
+                    alt=""></div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Commerce-Management"> Commerce &amp;
+                    Management</a>
+
+            </div>
+        </div>
+
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Physical-Science-Icon-19.png "
+                    alt=""></div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Physical-Sciences"> Physical Sciences</a>
+
+            </div>
+        </div>
+
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Coumputer-Sciences-Icon-07.png "
+                    alt=""></div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Computer-Science-Technology"> Computer Science
+                    &amp; Technology </a>
+
+            </div>
+        </div>
+
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Pharmaceutical-Sciences-Icon-01.png "
+                    alt=""></div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Pharmaceutical-Science"> Pharmaceutical Science
+                </a>
+
+            </div>
+        </div>
+
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Hotel-Management-Icon-10.png "
+                    alt=""></div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Hotel-Management"> Hotel Management</a>
+
+            </div>
+        </div>
+
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Humanities-Icon-11.png " alt="">
+            </div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Humanities"> Humanities</a>
+
+            </div>
+        </div>
+
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Law-Icon-12.png " alt="">
+            </div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Law"> Law</a>
+
+            </div>
+        </div>
+
+        <div class="schoolContainer">
+            <div class="schoolimage"><img
+                    src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Life-Sciences-Icon-14.png "
+                    alt=""></div>
+            <div class="title">
+                <a href=" https://www.starexuniversity.com/academics/Life-Sciences"> Life Sciences</a>
+
+            </div>
+        </div>
+    </div>
+</mat-toolbar>
