--- a/src/app/left-nav/left-nav.html
+++ b/src/app/left-nav/left-nav.html
@@ -1,18 +1,25 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened>
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item routerLink="/dashboard">
+        <mat-nav-list>
+      <a mat-list-item routerLink="/law">
         <mat-icon matListIcon>dashboard</mat-icon>
-        <span matLine>Dashboard</span>
+        <span matLine>Law</span>
       </a>
-      <a mat-list-item routerLink="/settings">
+      <a mat-list-item routerLink="/pahrmacy">
+        <mat-icon matListIcon>Pahrmacy</mat-icon>
+        <span matLine>Pahrmacy</span>
+      </a>
+      <a mat-list-item routerLink="/physical-science">
+        <mat-icon matListIcon>Physical Science</mat-icon>
+        <span matLine>Physical Science</span>
+      </a>
+      <a mat-list-item routerLink="/agriculture">
         <mat-icon matListIcon>settings</mat-icon>
-        <span matLine>Settings</span>
+        <span matLine>Agriculture</span>
       </a>
-      <a mat-list-item routerLink="/messages">
+      <a mat-list-item routerLink="/computer-science">
         <mat-icon matListIcon>message</mat-icon>
-        <span matLine>Messages</span>
+        <span matLine>Computer Science</span>
       </a>
     </mat-nav-list>
   </mat-sidenav>
