--- a/src/app/footer/footer.scss
+++ b/src/app/footer/footer.scss
@@ -1,17 +1,10 @@
-.py50 {
-    padding-bottom: 50px;
-    padding-top: 50px;
-}
 .footer {
-    background: #284fa7;
+    width: 100vw;
+    max-width: 100%;
+    background: #4fa6f7;
     color: #fff;
+    padding: 20px
 }
-
-.footer {
-    width: 100%;
-    float: left;
-    position: relative;
-}
-ul a{
+ul a {
     color: white;
 }
