--- a/src/app/home-content/home.scss
+++ b/src/app/home-content/home.scss
@@ -1,7 +1,8 @@
 
 .home{
     display: flex;
-    max-width: 100vw;
+     width: 100vw;
+  max-width: 100%;
     height: auto;
     flex-direction: column ;
 }
@@ -39,7 +40,7 @@
       width: 100%;
     height: 100%;
     position: absolute;
-    object-fit: cover;/* or use 'contain' if you want the full video visible */
+    //object-fit: cover;/* or use 'contain' if you want the full video visible */
 }
 .about_content{
     width: 60%;
