--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,23 @@
 
 html, body { height: 100%; }
 body {
-    width: 100vw;
+     width: 100vw;
+  max-width: 100%;
     height: 100vh;
     margin: 0;
     padding: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    overflow: visible
      }
+     app-root{
+        display: block;
+        overflow: visible;
+     }
+     .mat-icon {
+  font-family: 'Material Icons' !important;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
      
